--- a/whatsapp-appointment-system-v1.0.0/backend/pom.xml
+++ b/whatsapp-appointment-system-v1.0.0/backend/pom.xml
@@ -26,6 +26,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
+  <!-- pick a Flyway version used across the project -->
+  
+
+    
     <dependencies>
         <!-- Spring Boot Starters -->
         <dependency>
@@ -64,22 +68,18 @@
         </dependency>
         
         <!-- Database -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-database-postgresql</artifactId>
-        </dependency>
-        
+     <dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.6.0</version>
+</dependency>
+
+<!-- Flyway (must match Spring Boot 3.2.x → Flyway 9.22.3+) -->
+<dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-core</artifactId>
+    <version>9.22.3</version>
+</dependency>
         <!-- Redis -->
         <dependency>
             <groupId>io.lettuce</groupId>
