--- a/whatsapp-appointment-system-v1.0.0/backend/src/main/resources/application.yml
+++ b/whatsapp-appointment-system-v1.0.0/backend/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: whatsapp-appointment-system
   
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:appointment_db}
-    username: ${DB_USER:appointment_user}
-    password: ${DB_PASSWORD:appointment_pass}
+    url: jdbc:postgresql://localhost:5432/appointment_db
+    username: postgres
+    password: 1234
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
@@ -14,7 +14,7 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: validate
+      # ddl-auto: update
     show-sql: false
     properties:
       hibernate:
@@ -63,7 +63,10 @@ payment:
     key-id: ${RAZORPAY_KEY_ID:}
     key-secret: ${RAZORPAY_KEY_SECRET:}
     webhook-secret: ${RAZORPAY_WEBHOOK_SECRET:}
-  default-provider: ${PAYMENT_PROVIDER:RAZORPAY}
+  stripe:
+    api-key: ${STRIPE_API_KEY:}
+    webhook-secret: ${STRIPE_WEBHOOK_SECRET:}
+  default-provider: ${PAYMENT_PROVIDER:STRIPE}
 
 # WhatsApp Configuration
 whatsapp:
